--- a/blog/src/index.css
+++ b/blog/src/index.css
@@ -1,5 +1,25 @@
+/* dark mode */
+:root{
+  --body_background:white!important;
+  --body_color:black!important;
+}
+
+/* dark mode */
+[data-theme="dark"]{
+  --body_background:black!important;
+  --body_color:white!important;
+}
+
+/* dark mode */
+*{
+  transition: all 0.3 ease-in-out;
+}
+
+/* Body */
 body {
   margin: 0;
+  padding: 0px;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,6 +27,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Code */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
